--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.5",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "firebase": "^10.12.4",
     "framer-motion": "^11.3.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
